app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 */
 @import "bootstrap";
 
 body {
  background-image: url("https://images.unsplash.com/photo-1506318137071-a8e063b4bec0?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxleHBsb3JlLWZlZWR8MTB8fHxlbnwwfHx8&w=1000&q=80");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: 100%;
 }

 .alert-custom {
   // background-color: #d63384;
   border-style: solid;
   border-color: #f002ff;
   border-width: 5px;
   $alert-border-radius: 10px;
   color: #fff;
   font-family: 'Courier New', monospace;
 }

 .neon {
  color: #fff;
  text-shadow:
    0 0 5px #fff,
    0 0 10px #fff,
    0 0 20px #fff,
    0 0 40px #0ff,
    0 0 80px #0ff,
    0 0 90px #0ff,
    0 0 100px #0ff,
    0 0 150px #0ff;
}

.neonBox {
 color: #f002ff;
 box-shadow:
   0 0 5px #f002ff,
   0 0 10px #f334ff,
   0 0 20px #f667ff,
   0 0 40px #f999ff,
   // 0 0 80px #0ff,
   // 0 0 90px #0ff,
   // 0 0 100px #0ff,
   // 0 0 150px #0ff;
}

.nav-item {
  margin: 5px;
}

.form-box {
  text-align: right;
  margin-left: auto;
  margin-right: auto;
  display: block;
  width: 40%;
}

.right {
  text-align: right;
}
.center {
  text-align: center;
}

